# chatbot

./: .gitignore  Cargo.toml  Dockerfile  README.md  a  compose.yml  config.example.toml  curl
src/: main.rs  utils.rs
src/archive/: mod.rs  retrieval.rs  storage.rs
src/bot/: mod.rs
src/bot/handler/: mod.rs
src/bot/handler/buttons/: delete.rs  edit.rs  mod.rs  next.rs  prev.rs  regen.rs
src/bot/handler/commands/: clear.rs  config.rs  mod.rs  reload.rs
src/bot/handler/events/: edit.rs  error.rs  freewill.rs  interaction.rs  message.rs  mod.rs
src/bot/handler/events/commands/: clear.rs  config.rs  mod.rs  reload.rs
src/bot/handler/framework/: clear.rs  config.rs  mod.rs  reload.rs
src/chat/: client.rs  context.rs  engine.rs  mod.rs  prompt.rs
src/chat/archive/: mod.rs  storage.rs
src/chat/client/: agent.rs  mod.rs  providers.rs
src/chat/client/tools/: mod.rs  recall.rs  store.rs
src/chat/context/: context.rs  message.rs  mod.rs
src/chat/engine/: engine.rs  guard.rs  mod.rs
src/chat/prompt/: builder.rs  mod.rs  prompt.rs  template.rs
src/config/: mod.rs  store.rs  structure.rs
src/utils/: log.rs  macros.rs  misc.rs  mod.rs
