[package]
name = "chatbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = { version = "0.10.1", features = ["serde"] }
colog = "1.3.0"
colored = "3.0.0"
env_logger = "0.11.6"
futures = "0.3.31"
indexmap = "2.7.1"
log = "0.4.26"
poise = "0.6.1"
qdrant-client = "1.13.0"
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_plain = "1.0.2"
serenity = "0.12.4"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.8.20"


[dependencies.branch-context]
git = "https://github.com/GustavoWidman/branch-context"
branch = "main"

[dependencies.rig-core]
git = "https://github.com/0xPlaygrounds/rig"
features = ["derive"]
