[package]
name = "chatbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = { version = "0.10.3", features = ["serde"] }
ciborium = "0.2.2"
colog = "1.3.0"
colored = "3.0.0"
env_logger = "0.11.6"
futures = "0.3.31"
indexmap = { version = "2.8.0", features = ["serde"] }
log = "0.4.27"
poise = "0.6.1"
qdrant-client = "1.13.0"
rand = "0.9.0"
regex = "1.11.1"
rig-core = "0.10.0"
rig-dyn = { version = "0.2.0", features = ["serde"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
serde_plain = "1.0.2"
serenity = "0.12.4"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"

[dependencies.branch-context]
git = "https://github.com/GustavoWidman/branch-context"
branch = "main"
features = ["serde"]
